# OctoPrintControl

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE
src/: app.cpp  app.h  command.cpp  command.h  discord.cpp  discord.h  http.cpp  http.h  interaction.cpp  interaction.h  main.cpp  octoprint.cpp  octoprint.h  octoprintcontrol.cpp  octoprintcontrol.h  printer.cpp  printer.h  utils.cpp  utils.h  version.h.in  websocket.cpp  websocket.h
